{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 561,
  "lineage": "e48bac9b-18ac-45a6-42ad-b5e369e07586",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:security-group/sg-0cac259dcadfca608",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac259dcadfca608",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow SSH and ICMP",
            "name_prefix": "",
            "owner_id": "870321390265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:internet-gateway/igw-0aff26fecc49b6a17",
            "id": "igw-0aff26fecc49b6a17",
            "owner_id": "870321390265",
            "tags": {
              "Name": "project_igw"
            },
            "tags_all": {
              "Name": "project_igw"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "project_secondary_rt_routes",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aff26fecc49b6a17",
            "id": "r-rtb-0bcc51d4eebc7ca581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bcc51d4eebc7ca58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_internet_gateway.project_igw",
            "module.project_vpc.aws_route_table.project_secondary_rt",
            "module.project_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_secondary_rt",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:route-table/rtb-0bcc51d4eebc7ca58",
            "id": "rtb-0bcc51d4eebc7ca58",
            "owner_id": "870321390265",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project_secondary_rt"
            },
            "tags_all": {
              "Name": "project_secondary_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_secondary_rt_association",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7848170d9f8e5f",
            "route_table_id": "rtb-0bcc51d4eebc7ca58",
            "subnet_id": "subnet-0e60c16b31785bd58"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.project_secondary_rt",
            "module.project_vpc.aws_subnet.project_public_subnet",
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012cd914758bfe3f5",
            "route_table_id": "rtb-0bcc51d4eebc7ca58",
            "subnet_id": "subnet-044c9ac7db8a851b9"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.project_secondary_rt",
            "module.project_vpc.aws_subnet.project_public_subnet",
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04519bba3d495e196",
            "route_table_id": "rtb-0bcc51d4eebc7ca58",
            "subnet_id": "subnet-0f36d4b869f9b1cc0"
          },
          "dependencies": [
            "module.project_vpc.aws_route_table.project_secondary_rt",
            "module.project_vpc.aws_subnet.project_public_subnet",
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_subnet",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-023f008be135ce0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023f008be135ce0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_private_subnet_us-west-2a"
            },
            "tags_all": {
              "Name": "project_private_subnet_us-west-2a"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-06a4d4e75ae64a9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a4d4e75ae64a9f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_private_subnet_us-west-2b"
            },
            "tags_all": {
              "Name": "project_private_subnet_us-west-2b"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-0319e1480428db80d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0319e1480428db80d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_private_subnet_us-west-2c"
            },
            "tags_all": {
              "Name": "project_private_subnet_us-west-2c"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_subnet",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-0e60c16b31785bd58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60c16b31785bd58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_public_subnet_us-west-2a",
              "Public": "true"
            },
            "tags_all": {
              "Name": "project_public_subnet_us-west-2a",
              "Public": "true"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-044c9ac7db8a851b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c9ac7db8a851b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_public_subnet_us-west-2b",
              "Public": "true"
            },
            "tags_all": {
              "Name": "project_public_subnet_us-west-2b",
              "Public": "true"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:subnet/subnet-0f36d4b869f9b1cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f36d4b869f9b1cc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870321390265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_public_subnet_us-west-2c",
              "Public": "true"
            },
            "tags_all": {
              "Name": "project_public_subnet_us-west-2c",
              "Public": "true"
            },
            "vpc_id": "vpc-00ba11469c57d95b0"
          },
          "dependencies": [
            "module.project_vpc.aws_vpc.project_vpc",
            "module.project_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.project_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "module.project_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870321390265:vpc/vpc-00ba11469c57d95b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d4334323942ea41",
            "default_route_table_id": "rtb-08b0d0ed30128e414",
            "default_security_group_id": "sg-0a8825b3ec5eeafcb",
            "dhcp_options_id": "dopt-03a11801c4bdc5760",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ba11469c57d95b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b0d0ed30128e414",
            "owner_id": "870321390265",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}